--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <div class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
@@ -31,95 +31,95 @@
                 Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
               </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="digits">
-        <h2 class="section__title">Цифры и факты</h2>
-        <h3 class="section__subtitle">Про учёбу и мозг</h3>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
-            <h4 class="table__heading">86 миллиардов</h4>
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">2.1 миллиарда</h4>
+            <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">1000 терабайт</h4>
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">500 триллионов</h4>
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">420 миллионов</h4>
+            <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">17–20 лет</h4>
+            <h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">1885 год</h4>
+            <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </li>
           <li class="table__cell">
-            <h4 class="table__heading">1889 год</h4>
+            <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a class="feynman__link" href="#">Подробнее →</a>
       </section>
       <section class="kaufman">
-        <h2 class="section__title section__title_theme_dark section_position_foreground">Принципы обучения</h2>
-        <h3 class="section__subtitle section__subtitle_theme_dark section_position_foreground">от Джоша Кауфмана</h3>
-        <ul class="table table_theme_dark section_position_foreground">
+        <h2 class="section-title section__title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section__subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">1</h4>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">2</h4>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">3</h4>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">4</h4>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">5</h4>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">6</h4>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">7</h4>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">8</h4>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">9</h4>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">10</h4>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
@@ -128,11 +128,11 @@
     </div>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" src="images/logo_place_footer.svg" alt="Логотип: Яндекс Практикум">
           <p class="footer__author">&copy; Лина Белитова</p>
         </div>
-        <nav class="footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
           <div class="footer__column-links">
             <a class="footer__column-link" href="#">Главная</a>
@@ -140,7 +140,7 @@
             <a class="footer__column-link" href="#">Наставники</a>
           </div>
         </nav>
-        <div class="footer__column_content_social">
+        <div class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <div class="footer__column-links">
             <a class="footer__column-link" href="#">
