--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img class="header__main-illustration" src="images/header-image.png" alt="Фрагмент картины Опять двойка">
       <div class="header__square-pic"></div>
     </header>
-    <div class="content">
+    <main class="content">
       <section class="description">
         <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
@@ -79,8 +79,8 @@
         <a class="feynman__link" href="#">Подробнее →</a>
       </section>
       <section class="kaufman">
-        <h2 class="section-title section__title_theme_dark">Принципы обучения</h2>
-        <p class="section-subtitle section__subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -125,7 +125,7 @@
         </ul>
         <div class="kaufman__triangle"></div>
       </section>
-    </div>
+    </main>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
