--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="/pages/index.css">
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 <body>
-  <div class="root">
+  <div class="page">
     <header class="header">
       <img class= "logo logo_place_header" src="images/logo_place_header.svg" alt="Логотип: Яндекс.Практикум">
       <h1 class="header__title">Научиться учиться</h1>
@@ -37,27 +37,27 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img class="cards__image" src="/images/cards-attention.png" alt="Обложка карточки Два вида внимания">
+            <img class="cards__image" src="images/cards-attention.png" alt="Обложка карточки Два вида внимания">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="/images/cards-recall.png" alt="Обложка карточки Recall">
+            <img class="cards__image" src="images/cards-recall.png" alt="Обложка карточки Recall">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="/images/cards-interliving.png" alt="Обложка карточки Интерливинг">
+            <img class="cards__image" src="images/cards-interliving.png" alt="Обложка карточки Интерливинг">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="/images/cards-question.png" alt="Обложка карточки Вопросы">
+            <img class="cards__image" src="images/cards-question.png" alt="Обложка карточки Вопросы">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="/images/cards-competence.png" alt="Обложка карточки Иллюзия компетентности">
+            <img class="cards__image" src="images/cards-competence.png" alt="Обложка карточки Иллюзия компетентности">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
@@ -132,7 +132,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="/images/khan-book.jpg" alt="Обложка книги Салмана Хана Весь мир — школа">
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка книги Салмана Хана Весь мир — школа">
             <a class="khan__buy-link translucency" href="#">Купить книгу →</a>
           </div>
         </div>
@@ -189,16 +189,16 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
           <a class="resources__link translucency" href="#">
-            <img class="resources__logo" src="/images/logo/resources-arzamas.svg" alt="Логотип: Арзамас">
+            <img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Логотип: Арзамас">
           </a>
           <a class="resources__link translucency" href="#">
-            <img class="resources__logo" src="/images/logo/resources-n1.svg" alt="Логотип: N + 1">
+            <img class="resources__logo" src="images/logo/resources-n1.svg" alt="Логотип: N + 1">
           </a>
           <a class="resources__link translucency" href="#">
-            <img class="resources__logo" src="/images/logo/resources-strelka.svg" alt="Логотип: Стрелка">
+            <img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Логотип: Стрелка">
           </a>
           <a class="resources__link translucency" href="#">
-            <img class="resources__logo" src="/images/logo/resources-polka.svg" alt="Логотип: Полка">
+            <img class="resources__logo" src="images/logo/resources-polka.svg" alt="Логотип: Полка">
           </a>
         </div>
       </section>
